# dataspot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md
cmake/: AddLogSpot.cmake  FindSQLite3.cmake
include/: DataSpot.h  DataSpotException.h  Database.h  Statement.h
include/dataspot/: DataSpot.h  Database.h  Dataspot.h  Exception.h  Statement.h
source/: DataSpot.cpp  Database.cpp  Statement.cpp
src/: DataSpot.cpp  Database.cpp  Dataspot.cpp  Statement.cpp
test/: dst-test.cpp  simple-test.cpp
